<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".factor.gas.GasCalc"
    tools:ignore="LabelFor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/spinner_temp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTemp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textTemp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:nextFocusDown="@id/editAd"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textTunit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/editTemp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:text="@string/unit_T"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textRo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/lubGest"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editRo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textRo"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textRoUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/editRo"
            android:layout_marginTop="80dp"
            android:text="@string/unit_Ro"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/spinner_ad"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editAd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textAd"
            android:layout_marginTop="150dp"
            android:nextFocusDown="@id/editPz"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textAdUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/editAd"
            android:layout_marginTop="160dp"
            android:text="@string/metr"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textAh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:text="@string/lubAh"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editAh"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textAd"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textAhUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/editAd"
            android:layout_marginTop="210dp"
            android:text="@string/unit_ah"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"
            android:text="@string/spinner_p"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPz"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="320dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textPun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/editPz"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="330dp"
            android:text="@string/unit_p"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textPa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="400dp"
            android:text="@string/spinner_pa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPa"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="420dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textPunA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/editPa"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="430dp"
            android:text="@string/unit_p"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dalej"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="500dp"
            android:text="@string/dalej" />

    </RelativeLayout>
</ScrollView>